[tool.poetry]
name = "md2tree"
version = "0.1.0"
description = ""
authors = ["kohei <koheitech001@gmail.com>"]
license = "Apach-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
treelib = "^1.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
